--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 # created by init task for use with github actons
-target_repo: ghcr.io/bradfordwagner/test
+target_repo: ghcr.io/bradfordwagner/gh-template-ansible-playbook
 upstream:
   repo: ghcr.io/bradfordwagner/ansible
   tag: 5.1.2
