--- a/.github/workflows/ansible_playbook_tags.yml
+++ b/.github/workflows/ansible_playbook_tags.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   config-yaml:
     name: config.yaml
-    runs-on: ubuntu-latest
+    runs-on: arm64
     outputs:
       config: ${{ steps.config.outputs.config }}
     steps:
@@ -16,17 +16,22 @@ jobs:
         name: yq=v4.43.1
         with:
           yq-version: v4.43.1
+      - name: yq=version
+        run: yq --version
+      
       - name: jq=1.7
         uses: dcarbone/install-jq-action@v2
         with:
           version: 1.7
+      
       - name: export=config
         id: config
         run: echo "config=$(yq -oj '.' config.yaml | jq -cr)" >> $GITHUB_OUTPUT
-  tags:
+  
+  matrix-builds:
+    name: ${{ matrix.build.os }}-${{ matrix.build.arch }}
     permissions: write-all
-    name: ${{ matrix.build.os }}
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.build.runs_on }}
     needs: config-yaml
     strategy:
       fail-fast: false
@@ -35,22 +40,32 @@ jobs:
     steps:
       - name: checkout=self
         uses: actions/checkout@v4
-      - name: task=3.35.1
-        uses: pnorton5432/setup-task@v1
-        with:
-          task-version: 3.35.1
-      - name: checkout=taskfiles
+      - name: task=latest
+        run: |
+          sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d
+          export PATH=$(pwd)/bin:$PATH
+      - name: task=version
+        run: ./bin/task --version
+      - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
         with:
           path: taskfiles
           repository: bradfordwagner/taskfiles
+          ref: feature/arm
       
-      - name: qemu
-        uses: docker/setup-qemu-action@v3
-      - name: docker_buildx=v0.13.1
-        uses: docker/setup-buildx-action@v3
+      # https://github.com/chrisdickinson/setup-yq/blob/latest/action.yml
+      - uses: chrisdickinson/setup-yq@v1.0.1
+        name: yq=v4.43.1
         with:
-          version: v0.13.1
+          yq-version: v4.43.1
+      - name: yq=version
+        run: yq --version
+      
+      - name: jq=1.7
+        uses: dcarbone/install-jq-action@v2
+        with:
+          version: 1.7
+      
       - uses: docker/login-action@v3
         name: login=ghcr.io
         with:
@@ -59,10 +74,19 @@ jobs:
           password: ${{ github.token }}
       - name: task=tags
         run: |
-          
           build=$(echo '${{ toJson(matrix.build) }}'  | jq -rc '.')
-          task -t ./taskfiles/tasks/containers/ansible.yml \
+          ./bin/task -t ./taskfiles/tasks/containers/ansible.yml \
             build \
             build=${build} \
             target_tag=${{ github.ref_name }} \
             is_tag=true
+      
+      - name: manifest_tool
+        continue-on-error: true
+        uses: pixelfederation/gh-action-manifest-tool@v0.1.7
+        with:
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
+          platforms: linux/amd64,linux/arm64
+          template: ${{ fromJSON(needs.config-yaml.outputs.config).target_repo }}:${{ github.ref_name }}-${{ matrix.build.os }}-OS_ARCH
+          target: ${{ fromJSON(needs.config-yaml.outputs.config).target_repo }}:${{ github.ref_name }}-${{ matrix.build.os }}
