--- a/.github/workflows/ansible_playbook_branches.yml
+++ b/.github/workflows/ansible_playbook_branches.yml
@@ -22,46 +22,16 @@ jobs:
       - name: export=config
         id: config
         run: echo "config=$(yq -oj '.' config.yaml | jq -cr)" >> $GITHUB_OUTPUT
-  branches:
-    permissions: write-all
-    name: ${{ matrix.build.os }}
+  
+  debian_bookworm-slim-amd64:
+    name: debian_bookworm-slim-amd64
     runs-on: ubuntu-latest
-    needs: config-yaml
-    strategy:
-      fail-fast: false
-      matrix:
-        build: ${{ fromJSON(needs.config-yaml.outputs.config).builds }}
     steps:
-      - name: checkout=self
-        uses: actions/checkout@v4
-      - name: task=3.35.1
-        uses: pnorton5432/setup-task@v1
-        with:
-          task-version: 3.35.1
-      - name: checkout=taskfiles
-        uses: actions/checkout@v4
-        with:
-          path: taskfiles
-          repository: bradfordwagner/taskfiles
-      
-      - name: qemu
-        uses: docker/setup-qemu-action@v3
-      - name: docker_buildx=v0.13.1
-        uses: docker/setup-buildx-action@v3
-        with:
-          version: v0.13.1
-      - uses: docker/login-action@v3
-        name: login=ghcr.io
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ github.token }}
-      - name: task=branches
-        run: |
-          
-          build=$(echo '${{ toJson(matrix.build) }}'  | jq -rc '.')
-          task -t ./taskfiles/tasks/containers/ansible.yml \
-            build \
-            build=${build} \
-            target_tag=latest \
-            is_tag=false
+      - name: test
+        run: echo "test"
+  debian_bookworm-slim-arm64:
+    name: debian_bookworm-slim-arm64
+    runs-on: ubuntu-latest
+    steps:
+      - name: test
+        run: echo "test"
