--- a/.github/workflows/ansible_playbook_branches.yml
+++ b/.github/workflows/ansible_playbook_branches.yml
@@ -23,15 +23,26 @@ jobs:
         id: config
         run: echo "config=$(yq -oj '.' config.yaml | jq -cr)" >> $GITHUB_OUTPUT
   
-  debian_bookworm-slim-amd64:
+  # run build
+  build-debian_bookworm-slim-linux/amd64:
     name: debian_bookworm-slim,amd64
     runs-on: ubuntu-latest
     steps:
       - name: test
         run: echo "test"
-  debian_bookworm-slim-arm64:
+  build-debian_bookworm-slim-linux/arm64:
     name: debian_bookworm-slim,arm64
     runs-on: ubuntu-latest
+    steps:
+      - name: test
+        run: echo "test"
+  # await completions and use manifest tool to stitch together
+  manifest-debian_bookworm-slim:
+    name: debian_bookworm-slim
+    runs-on: ubuntu-latest
+    needs:
+      - build-debian_bookworm-slim-linux/amd64
+      - build-debian_bookworm-slim-linux/arm64
     steps:
       - name: test
         run: echo "test"
