--- a/.github/workflows/ansible_playbook_tags.yml
+++ b/.github/workflows/ansible_playbook_tags.yml
@@ -5,6 +5,18 @@ on:
       - '*'
 jobs:
   # run build
+  build-alpine_3.18-amd64:
+    name: alpine_3.18,amd64
+    runs-on: ubuntu-latest
+    steps:
+      - name: test
+        run: echo "test"
+  build-alpine_3.18-arm64:
+    name: alpine_3.18,arm64
+    runs-on: ubuntu-latest
+    steps:
+      - name: test
+        run: echo "test"
   build-debian_bookworm-slim-amd64:
     name: debian_bookworm-slim,amd64
     runs-on: ubuntu-latest
@@ -18,6 +30,15 @@ jobs:
       - name: test
         run: echo "test"
   # await completions and use manifest tool to stitch together
+  manifest-alpine_3.18:
+    name: alpine_3.18
+    runs-on: ubuntu-latest
+    needs:
+      - build-alpine_3.18-amd64
+      - build-alpine_3.18-arm64
+    steps:
+      - name: test
+        run: echo "test"
   manifest-debian_bookworm-slim:
     name: debian_bookworm-slim
     runs-on: ubuntu-latest
