--- a/config.yaml
+++ b/config.yaml
@@ -4,8 +4,8 @@ upstream:
   repo: ghcr.io/bradfordwagner/ansible
   tag: 5.8.0
 builds:
-  # - os: alpine_3.18
-  #   platforms: [linux/amd64, linux/arm64]
+  - os: alpine_3.18
+    platforms: [linux/amd64, linux/arm64]
   # - os: alpine_3.19
   #   platforms: [linux/amd64, linux/arm64]
   # - os: archlinux_latest
