--- a/.github/workflows/ansible_playbook_tags.yml
+++ b/.github/workflows/ansible_playbook_tags.yml
@@ -5,25 +5,33 @@ on:
       - '*'
 jobs:
   # run build
-  e0b02b9018cd145833ab0a64bdc468179222efd52862838ba3f25c8ec5316a28:
+  # requires first character to be a letter
+  # use sha256 of build os and platform
+  ae0b02b9018cd145833ab0a64bdc468179222efd52862838ba3f25c8ec5316a28:
     name: alpine_3.18,linux/amd64
     runs-on: ubuntu-latest
     steps:
       - name: test
         run: echo "test"
-  9d37600b864a7db677838adaf2b1e7f2e878419aa56c2b54e66bca69fbb2c3a5:
+  # requires first character to be a letter
+  # use sha256 of build os and platform
+  a9d37600b864a7db677838adaf2b1e7f2e878419aa56c2b54e66bca69fbb2c3a5:
     name: alpine_3.18,linux/arm64
     runs-on: ubuntu-latest
     steps:
       - name: test
         run: echo "test"
-  443fbd6e8e9747d694f4eeed7459c72beb61f27a7657e1b29072637d4f723c49:
+  # requires first character to be a letter
+  # use sha256 of build os and platform
+  a443fbd6e8e9747d694f4eeed7459c72beb61f27a7657e1b29072637d4f723c49:
     name: debian_bookworm-slim,linux/amd64
     runs-on: ubuntu-latest
     steps:
       - name: test
         run: echo "test"
-  75561c686337db41b84876dc4e4f92f63e56f30b98a8c4c6b9cfe2af82c59828:
+  # requires first character to be a letter
+  # use sha256 of build os and platform
+  a75561c686337db41b84876dc4e4f92f63e56f30b98a8c4c6b9cfe2af82c59828:
     name: debian_bookworm-slim,linux/arm64
     runs-on: ubuntu-latest
     steps:
@@ -34,8 +42,12 @@ jobs:
     name: alpine_3.18
     runs-on: ubuntu-latest
     needs:
-      - e0b02b9018cd145833ab0a64bdc468179222efd52862838ba3f25c8ec5316a28
-      - 9d37600b864a7db677838adaf2b1e7f2e878419aa56c2b54e66bca69fbb2c3a5
+      # requires first character to be a letter
+      # use sha256 of build os and platform
+      - ae0b02b9018cd145833ab0a64bdc468179222efd52862838ba3f25c8ec5316a28
+      # requires first character to be a letter
+      # use sha256 of build os and platform
+      - a9d37600b864a7db677838adaf2b1e7f2e878419aa56c2b54e66bca69fbb2c3a5
     steps:
       - name: test
         run: echo "test"
@@ -43,8 +55,12 @@ jobs:
     name: debian_bookworm-slim
     runs-on: ubuntu-latest
     needs:
-      - 443fbd6e8e9747d694f4eeed7459c72beb61f27a7657e1b29072637d4f723c49
-      - 75561c686337db41b84876dc4e4f92f63e56f30b98a8c4c6b9cfe2af82c59828
+      # requires first character to be a letter
+      # use sha256 of build os and platform
+      - a443fbd6e8e9747d694f4eeed7459c72beb61f27a7657e1b29072637d4f723c49
+      # requires first character to be a letter
+      # use sha256 of build os and platform
+      - a75561c686337db41b84876dc4e4f92f63e56f30b98a8c4c6b9cfe2af82c59828
     steps:
       - name: test
         run: echo "test"
