--- a/.github/workflows/ansible_playbook_branches.yml
+++ b/.github/workflows/ansible_playbook_branches.yml
@@ -6,22 +6,6 @@ jobs:
   # run build
   # requires first character to be a letter
   # use sha256 of build os and platform
-  aef1e3e5895d14adccfebb804f6c2f8bc704d2d346cc0d797675b16f86722f97d:
-    name: alpine_3.18,linux/amd64
-    runs-on: ubuntu-latest
-    steps:
-      - name: test
-        run: echo "test"
-  # requires first character to be a letter
-  # use sha256 of build os and platform
-  a8e50f28b87529867e094666995e8f7cd143badc19ac5df19b35bccdbfac208a4:
-    name: alpine_3.18,linux/arm64
-    runs-on: ubuntu-latest
-    steps:
-      - name: test
-        run: echo "test"
-  # requires first character to be a letter
-  # use sha256 of build os and platform
   a244d78324ff2408b74f026c5b01d206e00c4d28e75bf26bb2692a63f008ed982:
     name: debian_bookworm-slim,linux/amd64
     runs-on: ubuntu-latest
@@ -32,24 +16,11 @@ jobs:
   # use sha256 of build os and platform
   a98a0e548a6229f57214d52c4bf203d5b7ec85e46d4b8c9f979700d29c7319d91:
     name: debian_bookworm-slim,linux/arm64
-    runs-on: ubuntu-latest
-    steps:
-      - name: test
-        run: echo "test" && exit 1
-  # await completions and use manifest tool to stitch together
-  a3f81e606d5902da8fe2af62e850773377b9e4b2bcff71f9a835f3e0cbd1a23da:
-    name: alpine_3.18
-    runs-on: ubuntu-latest
-    needs:
-      # requires first character to be a letter
-      # use sha256 of build os and platform
-      - aef1e3e5895d14adccfebb804f6c2f8bc704d2d346cc0d797675b16f86722f97d
-      # requires first character to be a letter
-      # use sha256 of build os and platform
-      - a8e50f28b87529867e094666995e8f7cd143badc19ac5df19b35bccdbfac208a4
+    runs-on: arm64
     steps:
       - name: test
         run: echo "test"
+  # await completions and use manifest tool to stitch together
   a7a8cbed9d9a2e94fb56e35155cc8fe61fbc1f6c89357b7eb10b509068e63acec:
     name: debian_bookworm-slim
     runs-on: ubuntu-latest
