--- a/.github/workflows/ansible_playbook_tags.yml
+++ b/.github/workflows/ansible_playbook_tags.yml
@@ -28,6 +28,13 @@ jobs:
         name: yq=v4.43.1
         with:
           yq-version: v4.43.1
+      - uses: docker/login-action@v3
+        name: login=ghcr.io
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
+      
       - name: task=tags
         run: |
           build='{"os":"debian_bookworm-slim","platforms":["linux/amd64","linux/arm64"]}'
@@ -61,6 +68,13 @@ jobs:
         name: yq=v4.43.1
         with:
           yq-version: v4.43.1
+      - uses: docker/login-action@v3
+        name: login=ghcr.io
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
+      
       - name: task=tags
         run: |
           build='{"os":"debian_bookworm-slim","platforms":["linux/amd64","linux/arm64"]}'
