--- a/config.yaml
+++ b/config.yaml
@@ -4,23 +4,23 @@ upstream:
   repo: ghcr.io/bradfordwagner/ansible
   tag: 5.8.0
 builds:
-  # - os: alpine_3.18
-  #   platforms: [linux/amd64, linux/arm64]
-  # - os: alpine_3.19
-  #   platforms: [linux/amd64, linux/arm64]
-  # - os: archlinux_latest
-  #   platforms: [linux/amd64]
-  # - os: debian_bookworm
-  #   platforms: [linux/amd64, linux/arm64]
+  - os: alpine_3.18
+    platforms: [linux/amd64, linux/arm64]
+  - os: alpine_3.19
+    platforms: [linux/amd64, linux/arm64]
+  - os: archlinux_latest
+    platforms: [linux/amd64]
+  - os: debian_bookworm
+    platforms: [linux/amd64, linux/arm64]
   - os: debian_bookworm-slim
     platforms: [linux/amd64, linux/arm64]
-  # - os: rockylinux_8
-  #   platforms: [linux/amd64, linux/arm64]
-  # - os: rockylinux_9
-  #   platforms: [linux/amd64, linux/arm64]
-  # - os: ubuntu_jammy
-  #   platforms: [linux/amd64, linux/arm64]
-  # - os: ubuntu_mantic
-  #   platforms: [linux/amd64, linux/arm64]
-  # - os: ubuntu_noble
-  #   platforms: [linux/amd64, linux/arm64]
+  - os: rockylinux_8
+    platforms: [linux/amd64, linux/arm64]
+  - os: rockylinux_9
+    platforms: [linux/amd64, linux/arm64]
+  - os: ubuntu_jammy
+    platforms: [linux/amd64, linux/arm64]
+  - os: ubuntu_mantic
+    platforms: [linux/amd64, linux/arm64]
+  - os: ubuntu_noble
+    platforms: [linux/amd64, linux/arm64]
