--- a/.github/workflows/ansible_playbook_tags.yml
+++ b/.github/workflows/ansible_playbook_tags.yml
@@ -13,9 +13,10 @@ jobs:
       - name: checkout=self
         uses: actions/checkout@v4
       - name: task=3.35.1
-        uses: pnorton5432/setup-task@v1
+        uses: arduino/setup-task@v1
         with:
-          task-version: 3.35.1
+          version: 3.35.1
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
         with:
@@ -53,9 +54,10 @@ jobs:
       - name: checkout=self
         uses: actions/checkout@v4
       - name: task=3.35.1
-        uses: pnorton5432/setup-task@v1
+        uses: arduino/setup-task@v1
         with:
-          task-version: 3.35.1
+          version: 3.35.1
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
         with:
@@ -93,9 +95,10 @@ jobs:
       - name: checkout=self
         uses: actions/checkout@v4
       - name: task=3.35.1
-        uses: pnorton5432/setup-task@v1
+        uses: arduino/setup-task@v1
         with:
-          task-version: 3.35.1
+          version: 3.35.1
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
         with:
@@ -133,9 +136,10 @@ jobs:
       - name: checkout=self
         uses: actions/checkout@v4
       - name: task=3.35.1
-        uses: pnorton5432/setup-task@v1
+        uses: arduino/setup-task@v1
         with:
-          task-version: 3.35.1
+          version: 3.35.1
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
         with:
@@ -173,9 +177,10 @@ jobs:
       - name: checkout=self
         uses: actions/checkout@v4
       - name: task=3.35.1
-        uses: pnorton5432/setup-task@v1
+        uses: arduino/setup-task@v1
         with:
-          task-version: 3.35.1
+          version: 3.35.1
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
         with:
@@ -213,9 +218,10 @@ jobs:
       - name: checkout=self
         uses: actions/checkout@v4
       - name: task=3.35.1
-        uses: pnorton5432/setup-task@v1
+        uses: arduino/setup-task@v1
         with:
-          task-version: 3.35.1
+          version: 3.35.1
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
         with:
@@ -253,9 +259,10 @@ jobs:
       - name: checkout=self
         uses: actions/checkout@v4
       - name: task=3.35.1
-        uses: pnorton5432/setup-task@v1
+        uses: arduino/setup-task@v1
         with:
-          task-version: 3.35.1
+          version: 3.35.1
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
         with:
@@ -293,9 +300,10 @@ jobs:
       - name: checkout=self
         uses: actions/checkout@v4
       - name: task=3.35.1
-        uses: pnorton5432/setup-task@v1
+        uses: arduino/setup-task@v1
         with:
-          task-version: 3.35.1
+          version: 3.35.1
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
         with:
@@ -333,9 +341,10 @@ jobs:
       - name: checkout=self
         uses: actions/checkout@v4
       - name: task=3.35.1
-        uses: pnorton5432/setup-task@v1
+        uses: arduino/setup-task@v1
         with:
-          task-version: 3.35.1
+          version: 3.35.1
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
         with:
@@ -373,9 +382,10 @@ jobs:
       - name: checkout=self
         uses: actions/checkout@v4
       - name: task=3.35.1
-        uses: pnorton5432/setup-task@v1
+        uses: arduino/setup-task@v1
         with:
-          task-version: 3.35.1
+          version: 3.35.1
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
         with:
@@ -413,9 +423,10 @@ jobs:
       - name: checkout=self
         uses: actions/checkout@v4
       - name: task=3.35.1
-        uses: pnorton5432/setup-task@v1
+        uses: arduino/setup-task@v1
         with:
-          task-version: 3.35.1
+          version: 3.35.1
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
         with:
@@ -453,9 +464,10 @@ jobs:
       - name: checkout=self
         uses: actions/checkout@v4
       - name: task=3.35.1
-        uses: pnorton5432/setup-task@v1
+        uses: arduino/setup-task@v1
         with:
-          task-version: 3.35.1
+          version: 3.35.1
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
         with:
@@ -493,9 +505,10 @@ jobs:
       - name: checkout=self
         uses: actions/checkout@v4
       - name: task=3.35.1
-        uses: pnorton5432/setup-task@v1
+        uses: arduino/setup-task@v1
         with:
-          task-version: 3.35.1
+          version: 3.35.1
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
         with:
@@ -533,9 +546,10 @@ jobs:
       - name: checkout=self
         uses: actions/checkout@v4
       - name: task=3.35.1
-        uses: pnorton5432/setup-task@v1
+        uses: arduino/setup-task@v1
         with:
-          task-version: 3.35.1
+          version: 3.35.1
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
         with:
@@ -573,9 +587,10 @@ jobs:
       - name: checkout=self
         uses: actions/checkout@v4
       - name: task=3.35.1
-        uses: pnorton5432/setup-task@v1
+        uses: arduino/setup-task@v1
         with:
-          task-version: 3.35.1
+          version: 3.35.1
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
         with:
@@ -613,9 +628,10 @@ jobs:
       - name: checkout=self
         uses: actions/checkout@v4
       - name: task=3.35.1
-        uses: pnorton5432/setup-task@v1
+        uses: arduino/setup-task@v1
         with:
-          task-version: 3.35.1
+          version: 3.35.1
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
         with:
@@ -653,9 +669,10 @@ jobs:
       - name: checkout=self
         uses: actions/checkout@v4
       - name: task=3.35.1
-        uses: pnorton5432/setup-task@v1
+        uses: arduino/setup-task@v1
         with:
-          task-version: 3.35.1
+          version: 3.35.1
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
         with:
@@ -693,9 +710,10 @@ jobs:
       - name: checkout=self
         uses: actions/checkout@v4
       - name: task=3.35.1
-        uses: pnorton5432/setup-task@v1
+        uses: arduino/setup-task@v1
         with:
-          task-version: 3.35.1
+          version: 3.35.1
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
         with:
@@ -733,9 +751,10 @@ jobs:
       - name: checkout=self
         uses: actions/checkout@v4
       - name: task=3.35.1
-        uses: pnorton5432/setup-task@v1
+        uses: arduino/setup-task@v1
         with:
-          task-version: 3.35.1
+          version: 3.35.1
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
         with:
