--- a/.github/workflows/ansible_playbook_branches.yml
+++ b/.github/workflows/ansible_playbook_branches.yml
@@ -16,6 +16,8 @@ jobs:
         with:
           version: 3.35.1
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: test=task
+        run: task --version
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
         with:
@@ -57,6 +59,8 @@ jobs:
         with:
           version: 3.35.1
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: test=task
+        run: task --version
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
         with:
