--- a/.github/workflows/ansible_playbook_branches.yml
+++ b/.github/workflows/ansible_playbook_branches.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           version: 3.35.1
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-      - name: test=task
+      - name: task=version
         run: task --version
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
@@ -30,6 +30,9 @@ jobs:
         name: yq=v4.43.1
         with:
           yq-version: v4.43.1
+      - name: yq=version
+        run: yq --version
+      
       - uses: docker/login-action@v3
         name: login=ghcr.io
         with:
@@ -59,7 +62,7 @@ jobs:
         with:
           version: 3.35.1
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-      - name: test=task
+      - name: task=version
         run: task --version
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
@@ -73,6 +76,9 @@ jobs:
         name: yq=v4.43.1
         with:
           yq-version: v4.43.1
+      - name: yq=version
+        run: yq --version
+      
       - uses: docker/login-action@v3
         name: login=ghcr.io
         with:
