--- a/.github/workflows/ansible_playbook_tags.yml
+++ b/.github/workflows/ansible_playbook_tags.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           version: 3.35.1
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-      - name: test=task
+      - name: task=version
         run: task --version
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
@@ -31,6 +31,9 @@ jobs:
         name: yq=v4.43.1
         with:
           yq-version: v4.43.1
+      - name: yq=version
+        run: yq --version
+      
       - uses: docker/login-action@v3
         name: login=ghcr.io
         with:
@@ -60,7 +63,7 @@ jobs:
         with:
           version: 3.35.1
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-      - name: test=task
+      - name: task=version
         run: task --version
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
@@ -74,6 +77,9 @@ jobs:
         name: yq=v4.43.1
         with:
           yq-version: v4.43.1
+      - name: yq=version
+        run: yq --version
+      
       - uses: docker/login-action@v3
         name: login=ghcr.io
         with:
