install it myself via hack

--- a/.github/workflows/ansible_playbook_branches.yml
+++ b/.github/workflows/ansible_playbook_branches.yml
@@ -20,12 +20,15 @@ jobs:
       - name: checkout=self
         uses: actions/checkout@v4
       - name: task=3.35.1
-        uses: arduino/setup-task@v2
-        with:
-          version: 3.35.1
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d
+          export PATH=$(pwd)/bin:$PATH
+        # uses: arduino/setup-task@v2
+        # with:
+        #   version: 3.35.1
+        #   repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: task=version
-        run: task --version
+        run: ./bin/task --version
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
         with:
@@ -66,12 +69,15 @@ jobs:
       - name: checkout=self
         uses: actions/checkout@v4
       - name: task=3.35.1
-        uses: arduino/setup-task@v2
-        with:
-          version: 3.35.1
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d
+          export PATH=$(pwd)/bin:$PATH
+        # uses: arduino/setup-task@v2
+        # with:
+        #   version: 3.35.1
+        #   repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: task=version
-        run: task --version
+        run: ./bin/task --version
       - name: checkout=taskfiles@feature/arm
         uses: actions/checkout@v4
         with:
