--- a/.github/workflows/ansible_playbook_branches.yml
+++ b/.github/workflows/ansible_playbook_branches.yml
@@ -23,10 +23,6 @@ jobs:
         run: |
           sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d
           export PATH=$(pwd)/bin:$PATH
-        # uses: arduino/setup-task@v2
-        # with:
-        #   version: 3.35.1
-        #   repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: task=version
         run: ./bin/task --version
       - name: checkout=taskfiles@feature/arm
@@ -46,7 +42,7 @@ jobs:
       - name: task=branches
         run: |
           build='{"os":"debian_bookworm-slim","platforms":["linux/amd64","linux/arm64"]}'
-          task -t ./taskfiles/tasks/containers/ansible.yml \
+          ./bin/task -t ./taskfiles/tasks/containers/ansible.yml \
             build \
             build=${build} \
             platform=linux/amd64 \
@@ -72,10 +68,6 @@ jobs:
         run: |
           sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d
           export PATH=$(pwd)/bin:$PATH
-        # uses: arduino/setup-task@v2
-        # with:
-        #   version: 3.35.1
-        #   repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: task=version
         run: ./bin/task --version
       - name: checkout=taskfiles@feature/arm
@@ -95,7 +87,7 @@ jobs:
       - name: task=branches
         run: |
           build='{"os":"debian_bookworm-slim","platforms":["linux/amd64","linux/arm64"]}'
-          task -t ./taskfiles/tasks/containers/ansible.yml \
+          ./bin/task -t ./taskfiles/tasks/containers/ansible.yml \
             build \
             build=${build} \
             platform=linux/arm64 \
