--- a/.github/workflows/ansible_playbook_branches.yml
+++ b/.github/workflows/ansible_playbook_branches.yml
@@ -26,3 +26,29 @@ jobs:
         id: config
         run: echo "config=$(yq -oj '.' config.yaml | jq -cr)" >> $GITHUB_OUTPUT
   
+  branches:
+    name: ${{ matrix.build.os }}
+    permissions: write-all
+    runs-on: ubuntu-latest
+    needs: config-yaml
+    strategy:
+      fail-fast: false
+      matrix:
+        build: ${{ fromJSON(needs.config-yaml.outputs.config).builds }}
+    steps:
+      - name: checkout=self
+        uses: actions/checkout@v4
+      - name: task=3.35.1
+        run: |
+          sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d
+          export PATH=$(pwd)/bin:$PATH
+      - name: task=version
+        run: ./bin/task --version
+      - name: checkout=taskfiles@feature/arm
+        uses: actions/checkout@v4
+        with:
+          path: taskfiles
+          repository: bradfordwagner/taskfiles
+          ref: feature/arm
+      - name: test
+        run: echo hi friends
