--- a/.github/workflows/ansible_playbook_tags.yml
+++ b/.github/workflows/ansible_playbook_tags.yml
@@ -30,7 +30,8 @@ jobs:
   tags:
     name: ${{ matrix.build.os }}
     permissions: write-all
-    runs-on: ubuntu-latest
+    runs-on: arm64
+    # runs-on: ubuntu-latest
     needs: config-yaml
     strategy:
       fail-fast: false
