--- a/.github/workflows/ansible_playbook_tags.yml
+++ b/.github/workflows/ansible_playbook_tags.yml
@@ -30,7 +30,7 @@ jobs:
   tags:
     name: ${{ matrix.build.os }}
     permissions: write-all
-    runs-on: arm64
+    runs-on: [arm64,ubuntu-latest]
     # runs-on: ubuntu-latest
     needs: config-yaml
     strategy:
