--- a/.github/workflows/ansible_playbook_branches.yml
+++ b/.github/workflows/ansible_playbook_branches.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   config-yaml:
     name: config.yaml
-    runs-on: ubuntu-latest
+    runs-on: [arm64,ubuntu-latest]
     outputs:
       config: ${{ steps.config.outputs.config }}
     steps:
@@ -29,7 +29,7 @@ jobs:
   branches:
     name: ${{ matrix.build.os }}
     permissions: write-all
-    runs-on: [arm64,ubuntu-latest]
+    runs-on: arm64
     # runs-on: ubuntu-latest
     needs: config-yaml
     strategy:
