multiply by runner

--- a/.github/workflows/ansible_playbook_tags.yml
+++ b/.github/workflows/ansible_playbook_tags.yml
@@ -37,6 +37,7 @@ jobs:
       fail-fast: false
       matrix:
         build: ${{ fromJSON(needs.config-yaml.outputs.config).builds }}
+        runner: [arm64, ubuntu-latest]
     steps:
       - name: checkout=self
         uses: actions/checkout@v4
