--- a/.github/workflows/ansible_playbook_branches.yml
+++ b/.github/workflows/ansible_playbook_branches.yml
@@ -27,9 +27,9 @@ jobs:
         run: echo "config=$(yq -oj '.' config.yaml | jq -cr)" >> $GITHUB_OUTPUT
   
   branches:
-    name: ${{ matrix.build.os }}
+    name: ${{ matrix.build.os }}-${{ matrix.build.runner }}
     permissions: write-all
-    runs-on: arm64
+    runs-on: ${{ matrix.build.runner }}
     # runs-on: ubuntu-latest
     needs: config-yaml
     strategy:
